--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.1.0",
     "react-img-carousel": "^2.0.0",
     "react-perfect-scrollbar": "^1.5.1",
