--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "socket.io-client": "^4.0.0",
     "stripe": "^8.148.0",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^11.1.2",
     "video-react": "^0.14.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
